# NumPredict1D

./: LICENSE  README.md
NumPredict1D/dataset/results/: experiment_results_3.csv
dataset/results/: experiment_results_2.csv  experiment_results_3.csv  experiment_results_4.csv  experiment_results_5.csv
docs/: DEMO.md  help_program.cpp
include/utec/activations/: nn_activation.h
include/utec/algebra/: tensor.h  tensor_complexity_analysis.md
include/utec/data_processing/: data_loader.h
include/utec/factories/: nn_factory.h
include/utec/loss_functions/: nn_loss.h
include/utec/neural_network/: neural_network.h  neural_network_complexity_analysis.md  nn_dense.h  nn_interfaces.h
include/utec/optimizers/: nn_optimizer.h
pong_ai/: CMakeLists.txt
pong_ai/include/utec/agent/: EnvGym.h  PongAgent .h
pong_ai/include/utec/algebra/: tensor.h
pong_ai/include/utec/data/: data_loader.h
pong_ai/include/utec/nn/: activation.h  dense.h  layer.h  loss.h  neural_network.h
pong_ai/include/utec/optimizer/: nn_optimizer.h
pong_ai/src/utec/: train.cpp
pong_ai/tests/: test_neural_network.cpp
src/: config.h  experiment_runner.cpp  trainer.h
tests/: main_all_tests.cpp  test_base.h
tests/activation_test/: main_test_activations.cpp  test_activations.h
tests/convergence_test/: main_test_convergence.cpp  test_convergence.h
tests/layer_test/: main_test_dense_layer.cpp  test_dense_layer.h
